// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Abs.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

function f(x:string) { }

module.exports = f;

=====================================output=====================================
function f(x: string) {}

module.exports = f;

================================================================================
`;

exports[`Rel.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

var f = require('./Abs');

f(0);

=====================================output=====================================
var f = require("./Abs");

f(0);

================================================================================
`;
